style.css
@font-face {
    font-family: "PP mori";
    src: url(fonts/ppmori.ttf);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: PP mori;
    color: #fff;
    cursor: none;
}

html, body {
    height: 100%;
    width: 100%;
    overflow: hidden;
    scroll-behavior: smooth;
}
.loader__container{
    background-color: #0F0D0D;
    height: 100vh;
    width: 100%;
    position: fixed;
    z-index: 99;
}
.loader {
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 10;
    width: 160px;
    height: 100px;
    margin-left: -80px;
    margin-top: -50px;
    border-radius: 5px;
    background: #1e3f57;
    animation: dot1_ 3s cubic-bezier(0.55,0.3,0.24,0.99) infinite;
  }
  
  .loader:nth-child(2) {
    z-index: 11;
    width: 150px;
    height: 90px;
    margin-top: -45px;
    margin-left: -75px;
    border-radius: 3px;
    background: #3c517d;
    animation-name: dot2_;
  }
  
  .loader:nth-child(3) {
    z-index: 12;
    width: 40px;
    height: 20px;
    margin-top: 50px;
    margin-left: -20px;
    border-radius: 0 0 5px 5px;
    background: #6bb2cd;
    animation-name: dot3_;
  }
  
  @keyframes dot1_ {
    3%,97% {
      width: 160px;
      height: 100px;
      margin-top: -50px;
      margin-left: -80px;
    }
  
    30%,36% {
      width: 80px;
      height: 120px;
      margin-top: -60px;
      margin-left: -40px;
    }
  
    63%,69% {
      width: 40px;
      height: 80px;
      margin-top: -40px;
      margin-left: -20px;
    }
  }
  
  @keyframes dot2_ {
    3%,97% {
      height: 90px;
      width: 150px;
      margin-left: -75px;
      margin-top: -45px;
    }
  
    30%,36% {
      width: 70px;
      height: 96px;
      margin-left: -35px;
      margin-top: -48px;
    }
  
    63%,69% {
      width: 32px;
      height: 60px;
      margin-left: -16px;
      margin-top: -30px;
    }
  }
  
  @keyframes dot3_ {
    3%,97% {
      height: 20px;
      width: 40px;
      margin-left: -20px;
      margin-top: 50px;
    }
  
    30%,36% {
      width: 8px;
      height: 8px;
      margin-left: -5px;
      margin-top: 49px;
      border-radius: 8px;
    }
  
    63%,69% {
      width: 16px;
      height: 4px;
      margin-left: -8px;
      margin-top: -37px;
      border-radius: 10px;
    }
  }

#purple{
    height: 100vh;
    width: 100vw;
    top: 0;
    position: fixed;
    z-index: 100;
    /* background-color: #EDBFFF; */
    opacity: 0;
    display: none;
    transition: opacity ease 1s;
    
}
.cursor{
    height: 20px;
    width: 20px;
    transform: translate(-50%, -50%);
    border-radius: 50%;
    position: fixed;
    background-color: #EDBFFF;
    z-index: 8;
    transition: background-image ease 0.5s;
    background-position: center;
    background-size:cover ;
    mix-blend-mode: difference;
    pointer-events: none;
}
.main{
    background-color: #0F0D0D;
    cursor: none;
    overflow: hidden;
}

.page1{
    min-height: 100vh;
    max-width: 100vw;
    position: relative;
    z-index: 9;
    padding-top: 12vw;
}


#nav{
    height: 8vh;
    width: 100vw;
    /* background-color: red; */
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 5vmin;
    position: fixed;
    mix-blend-mode: difference;
    z-index:102;
}
#nav h2{
    font-weight: 900;
    font-size: 4vmin;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    display: flex;
    align-items: end;
    gap: 1vmin;
}
#nav h2 svg{
    height: 4vmin;
    width: 4vmin;
}
#nav-part2{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 4vmin;
}

#nav #circle{
    height: 2.5vmin;
    width: 2.5vmin;
    border-radius: 50%;
    background-color: #fff;
}
#nav h4{
    font-size: 2.3vmin;
    font-weight: 500;
    text-transform: uppercase;
}
#nav h4:nth-child(1){
    border-bottom: 1.5px solid #fff;
}
a{
    text-decoration: none;
}
.page1 h1{
    font-size: 15vmin;
    font-weight: 300;
    font-family: "PP mori";
    width: 100vw;
    padding-left: 6vw;
    transform-origin: left;
}
.page1 h2{
    font-size: 15vmin;
    font-weight: 300;
    transform-origin: left;
    position: relative;
    padding-top: 3vmin;
    text-align: right;
    padding-right: 6vw;
}

.page1 video{
    width: 60%;
    margin-top: 10vw;
    position: relative;
    left: 50%;
    transform: translate(-50%,0);
}
@media (min-width: 768px ){
    .smallvideo{
        display: none;
    }
}


.page2{
    min-height: 80vh;
    width: 100%;
    padding: 10vmin 5vw;
    border-bottom: 2px solid #6c6c6c;
    position: relative;
    z-index: 9;
}

.page2 h2{
    font-size:13vmin;
    font-weight: 500;
    color: #111;
display: flex;
align-items: center;
flex-wrap: wrap;
gap: 3vmin;
}
.page2 h2 svg{
    height: 13vmin;
    width: 13vmin;
}

.page2-container{
    height: 60vh;
    width: 100%;
    /* background-color: red; */
    display: flex;
    align-items: center;
    justify-content: space-between;
    /* padding: 0 5vw; */
}
.page2-left{
    /* background-color: blue; */
    width: 40%;
}
.page2-right{
    /* background-color: blue; */
    width: 24%;
}
.page2-left h3{
    font-size: 7vmin;
    font-weight: 300;
    color: #111;
    line-height: 4vw;
}
.page2-left h3 span{
    background-color: #0F0D0D;
}
.page2-right p{
    font-size: 3.5vmin;
    color: #111;
}
.page2-right button{
    width: 100%;
    border-radius: 50px;
    border: none;
    padding: 2vmin 0;
    background-color: #EDBFFF;
    color: #111;
    margin-top: 20px;
    font-weight: 900;
    font-size: 3vmin;
}

.page3{
    min-height: 100vh;
    width: 100%;
    padding: 10vmin 0;
    /* position: relative; */
    z-index: 9;

}

.page3 h1{
    font-size: 12.8vmin;
    font-weight: 300;
    margin-left: 7vw;
    mix-blend-mode: difference;

}
.page3 h3{
    margin-top: 3vmin;
    mix-blend-mode: difference;
    font-size: 5vmin;


}
.page3-part1, .page3-part2{
    display: flex;
    /* flex-direction: column; */
    align-items: flex-start;
    justify-content: space-between;
    text-align: center;

}
.page3-part1 img{
    width: 45vw;
    margin-top: 16vh;
}
.page3-part2 img{
    margin-top: 18vh;
    width: 40vw;
}
.page3-part1 video{
    width: 45vw;
    margin-top: 6vh;
}
.page3-part2 video{
    width: 55vw;
}



.page4{
    min-height: 110vh;
    width: 100%;
    z-index: 9;
    position: relative;
    padding: 35vmin 8vmin;
}
.elem{
    /* background-color: salmon; */
    margin-bottom: 1vh;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}
.elem img{
    position: absolute;
    opacity: 0;
    transition: all ease-out 0.5s;
    transform: translateY(10%) rotate(2deg);
}
.elem1 img:nth-child(1){
    object-fit: cover;
}
.elem img:nth-child(1){
    left: 2%;
    width: 70vmin;
}
.elem img:nth-child(3){
    right: 5%;
    width: 55vmin;
}
.text-div{
    height: 15vh;
    position: relative;
    z-index: 9;
    overflow: hidden;
}
.elem h1{
    font-size: 7.5vw;
    height: 15vh;
    font-weight: 600;
    transition: all ease-out 0.5s;
    /* line-height: 105%; */
}

.elem:hover h1{
    transform: translateY(-100%);
    color: #EDBFFF;
}
.elem:hover img{
    opacity: 1;
    transform: translateY(0%) rotate(0deg);
}


.page5{
    min-height: 100vh;
    width: 100%;
    position: relative;
    z-index: 9;
    padding: 10vh 7vw;
}
.page5 h2{
    font-size: 8vmin;
    text-transform: uppercase;
    font-weight: 400;
    margin-bottom: 6vh;
}
.box{
    /* background-color: red; */
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 13vh;
    padding: 0 4vmin;
    border-top: 2px solid #dadada;
}

.box:nth-last-child(1){
    border-bottom: 2px solid #dadada;

}

footer{
    min-height: 90vh;
    width: 100%;
    background-color: #EDBFFF;
}


footer form button{

}



@media (max-width: 768px){
    .cursor{
        display: none;
    }
    #loader{
        display: none;
    }
    .page1{
        padding: 18vh 0;
    }
    
    #nav h2{
        font-size: 5.5vmin;
        gap: 2vmin;
    }
    #nav h2 svg{
        height: 5.5vmin;
        width: 5.5vmin;
    }

    #nav h4{
        font-size: 3.5vmin;
    }
    #nav h4{
        border-bottom: 1.5px solid #fff;
    }
    
    .page1 h1{
        padding-left: 20vw;
    }
    .page1 h2{
        padding-right: 20vw;

    }
    .bigvideo{
        display: none;
    }
    
    .page1 .smallvideo{
        width: 20%;
        margin-top: 10vh;
    }






    .page2{
        min-height: 90vh;
        padding: 10vmin 5vmin;
    }
    
    .page2-container{
        height: 60vh;
        width: 100%;
        /* background-color: red; */
        display: flex;
        align-items: center;
        justify-content: space-between;
        flex-direction: column;
        /* padding: 0 5vw; */
    }
    .page2-left{
        padding-top: 10vh;
        width: 90%;
    }
    .page2-right{
        width: 90%;
    }
    .page2-left h2{
        font-size: 8vmin;
        line-height: 100%;
    }
 
    .page2-right p{
        font-size: 4.5vmin;
    }
    .page2-right button{

        padding: 4vmin 0;
        margin-top: 7vmin;
        font-size: 5vmin;
    }



    
    .page3 h1{
        margin-left: 7vmin;
    }
    .page3-part1, .page3-part2{
        display: flex;
        flex-direction: column;
    }
    .page3-part1 img{
        width: 75vw;
        margin-top: 6vh;
    }
    .page3-part1 video{
        width: 85vw;
        margin-top: 6vh;
        margin-left: 15vw;
    }
    .page3-part2 img{
        width: 90vw;
        margin-top: 6vh;
    }
    .page3-part2 video{
        width: 70vw;
        margin-top: 6vh;
        margin-left: 15vw;
    }


 /* page4 */

 .page4{
    min-height: 40vh;
    width: 100%;
    z-index: 9;
    position: relative;
    padding: 30vmin 8vmin;
}
    .elem{
        /* background-color: salmon; */
        margin-bottom: 1vh;
        display: flex;
        align-items: center;
        justify-content: center;
        position: relative;
    }
    .elem img{
        position: absolute;
        opacity: 0;
        transition: all ease-out 0.5s;
        transform: translateY(10%) rotate(2deg);
    }
    .elem img:nth-child(1){
        left: auto;
        /* transform: translate(-50%, 0); */
        width: 70vmin;
    }
    .elem img:nth-child(3){
        display: none;
    }

    .elem h1{
        font-size: 16.5vw;
        height: 15vh;
        font-weight: 600;
        transition: all ease-out 0.5s;
        /* line-height: 105%; */
    }

    

    .page5{
        min-height: 100vh;
        width: 100%;
        position: relative;
        z-index: 9;
        padding: 10vh 7vw;
    }
    .page5 h2{
        font-size: 8vmin;
        text-transform: uppercase;
        font-weight: 400;
        margin-bottom: 6vh;
    }
    .box{
        /* background-color: red; */
        display: flex;
        align-items: center;
        justify-content: space-between;
        height: 13vh;
        padding: 0 4vmin;
        border-top: 2px solid #dadada;
    }
    
    .box:nth-last-child(1){
        border-bottom: 2px solid #dadada;
    
    }
}

